Stop the header from covering the heading after navigating

--- a/responsive-nav/style.css
+++ b/responsive-nav/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
     margin: 0;
     font-family: Helvetica, sans-serif;
@@ -14,6 +18,7 @@ body {
     background-color: #fff;
     box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
     position: fixed;
+    top: 0;
     width: 100%;
     z-index: 3;
   }
@@ -139,3 +144,9 @@ body {
     }
   }
   
+
+  /* content */
+
+  section {
+    padding-top: 3em;
+  }
